# bevy-bullet-hell

./: Cargo.toml  README.md  rustfmt.toml
src/: audio.rs  constants.rs  enemy.rs  gameover.rs  lib.rs  loading.rs  main.rs  menu.rs  player.rs  skill.rs
src/actions/: game_control.rs  mod.rs
src/components/: killable.rs  mod.rs  playerui.rs
src/plugins/: despawner.rs  enemy.rs  gameover.rs  mod.rs
src/ui/: damage.rs  exp.rs  health.rs  levelup.rs  mod.rs
