[package]
name = "bevy_bullet_hell"
version = "0.1.0"
publish = false
authors = ["Bogdan Lipovtsev <megafreelancer2012@gmail.com>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
# Bevy defaults minus audio and some other not needed things
# see https://github.com/bevyengine/bevy/blob/main/Cargo.toml#L31-L54
default = [
    "bevy/animation",
    "bevy/bevy_asset",
    "bevy/bevy_scene",
    "bevy/bevy_winit",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_gltf",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/png",
    "bevy/hdr",
    "bevy/zstd",
    "bevy/x11",
    "bevy/ktx2",
    "bevy/tonemapping_luts"
]

[dependencies]
bevy = { version = "0.13.2", default-features = false }
bevy_kira_audio = { version = "0.19" }
bevy_asset_loader = { version = "0.20" }
rand = { version = "0.8.5" }
bevy_hanabi = "0.11"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.29", default-features = false, features = ["rwh_06"] }
image = { version = "0.25", default-features = false }

[build-dependencies]
embed-resource = "1.4"
